--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,22 @@
     overflow: auto;
 }
 
-.Navigation {
-    position: fixed;
-    top: 0;
-    /* left: 50%;
-    max-width: 100%; */
-    width: max-content;
-    z-index: 999;
+
+nav td {
+    padding: 25px;
 }
 
-nav td{
-    padding: 25px;
+.navigation {
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+#sign-in {
+    display: flex;
+    justify-content: center;
 }
 
 .item {
@@ -26,7 +31,8 @@ nav td{
     padding: 10px;
 }
 
-td h5, td p{
+td h5,
+td p {
     margin: 2px;
 }
 
@@ -36,9 +42,29 @@ td h5, td p{
     margin: 0px;
 }
 
+
 .home-blog-list {
-    /* max-height: 100vh;
-    overflow: auto; */
-    max-height: calc(100vh - 80px);
-    /* overscroll-behavior: contain; */
+    max-height: calc(100vh - 200px);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(236, 7, 7, 0.8);
+    /* box-shadow: inset 0 0 2px olive; */
+    border-radius: 7px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
